--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+/*BUG: overflowX check it on what m i doing section maybe*/
+
 :root {
     --transition: all 300ms ease-in-out;
     --dark-color: #332e29;
@@ -36,7 +38,6 @@ ul {
 
 a {
     text-decoration: none;
-  /* ver luego si hace falta cambair a oscuro */
     color: var(--dark-color);
 }
 
@@ -89,7 +90,7 @@ h1, h2, h3 {
 /* HEADER */
 #header {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
-    url('../imgs/mrPicture.jpg') center/cover no-repeat fixed;;
+    url('../imgs/mrPicture.jpg') center/cover no-repeat fixed;
     justify-content: flex-start;
     align-items: flex-end;
 }
@@ -138,10 +139,97 @@ opacity: 0.9;
   overflow: hidden;
 }
 
+/* BTN DOWN & TITLE REUSABLE */
+.btn-down {
+  font-size: 3rem;
+  display: inline-block;
+  margin-top: 1rem;
+  transition: var(--transition);
+}
+
+.btn-down:hover {
+  opacity: .8;
+  transform: translateY(5px);
+}
+
+.title {
+  margin-bottom: 5rem;
+}
+
+.title h2 {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 600;
+  position: relative;
+}
+
+.title h2::after {
+  position: absolute;
+  content: "";
+  top: 120%;
+  left: 0;
+  width: 70px;
+  height: 4px;
+  background-color: var(--dark-color);
+}
+
+/* WORK */
+#work {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
+    url('../imgs/ajedrez.jpg') center/cover no-repeat fixed;
+    color: var(--light-color);
+}
+
+#work .title h2, #work h3 {
+    color: var(--light-color);
+}
+
+#work .title h2::after {
+    background: var(--light-color);
+}
+
+.work-bottom {
+    margin-top: 4rem;
+    text-align: center;
+}
+
+.work-bottom > div .icon img {
+    width: 50px;
+    margin: 0 auto 1.7rem auto;
+}
 
 /* MEDIA QUERIES */
+@media(min-width: 450px) {
+  .work-bottom {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 3rem;
+    row-gap: 0;
+  }
+}
+
+@media(min-width: 576px) {
+  .title h2 {
+    font-size: 4rem;
+  }
+
+  .work-bottom {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 @media(min-width: 768px) {
   .header-content h1 {
     font-size: 7rem;
   }
+
+  .about-content {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 6rem;
+    row-gap: 0;
+  }
+
+  .about-left {
+    margin-bottom: 0;
+  }
 }
+
