--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ h1, h2, h3 {
 
 /* work */
 #work{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../imgs/ajedrez.jpg') center/cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../imgs/camara.jpg') center/cover no-repeat fixed;
     color: var(--light-color);
 }
 
